--- a/deployment.yml
+++ b/deployment.yml
@@ -15,7 +15,7 @@ spec:
         containers:
           - name: myspringboot
             image: vaibhavpatill/demoapplicattion:latest
-            imagePullPolicy: always
+            imagePullPolicy: Always
             ports:
               - containerPort: 9099
            
